<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_how_to_use"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/nav_how_to_use" />
        <item
            android:id="@+id/nav_share"
            android:icon="@android:drawable/ic_menu_share"
            android:title="@string/nav_share" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/nav_rate" />
        <item
            android:id="@+id/nav_more_apps"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/nav_more_apps" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/nav_contact_us" />
        <item
            android:id="@+id/nav_privacy"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/nav_privacy" />
    </group>
</menu>